--- a/index.html
+++ b/index.html
@@ -3,75 +3,72 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign-up</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <title>Sign-up</title>
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="odin-logo">
-            <img src="image/odin-lined.png" alt="The-Odin-Project-Logo">
-            <h1>ODIN</h1>
+    <div class="content">
+        <div class="picture">
+            <div class="logo">
+                <img src="image/anime.png" alt="logo" class="whale">
+                <h1 class="isekai">Isekai</h1>
+            </div>
         </div>
-    </div>
-
-    <main>
-        <section class="description">
-            <p>
-                🌟 Welcome to the world of limitless possibilities! Join us on a journey to parallel universes where you
-                can shape your
-                destiny. <br>Sign up <em>now</em> to get started.
-            </p>
-            <p>
-                You <em>know</em> you want to.
-            </p>
-        </section>
-        <form action="">
-            <div class="form-container">
-                <p>Let's do this!</p>
-
-                <fieldset>
-                    <div class="form-cell">
-                        <label for="first_name">First Name</label>
-                        <input type="text" name="first_name" id="first_name">
+        <div class="right">
+            <div class="dummy-text left">
+                <p>🌟Welcome to the world of limitless possibilities! Join us on a journey to parallel universes where
+                    you
+                    can shape your
+                    destiny.!🌟</p>
+                <p>🌟Sign up <em>now</em> to get started.🌟</p>
+                <p class="remote-text">🌟You <em>know</em> you want to.🌟</p>
+            </div>
+            <form action="#">
+                <div class="form left">
+                    <p class="form-title">Let's do this!</p>
+                    <div class="input">
+                        <label for="first-name">First name</label>
+                        <input type="text" name="first-name" id="first-name" required>
                     </div>
-                    <div class="form-cell">
-                        <label for="last_name">Last Name</label>
-                        <input type="text" id="last_name" name="last_name">
+
+                    <div class="input">
+                        <label for="last-name">Last name</label>
+                        <input type="text" name="last-name" id="last-name">
                     </div>
-                </fieldset>
-                <fieldset>
-                    <div class="form-cell">
+
+                    <div class="input">
                         <label for="email">Email</label>
-                        <input type="email" name="email" id="email">
+                        <input type="email" name="email" id="email" required>
                     </div>
-                    <div class="form-cell">
-                        <label for="phone">Phone Number</label>
-                        <input type="text" id="phone" name="phone">
-                    </div>
-                </fieldset>
 
-                <fieldset>
-                    <div class="form-cell">
+                    <div class="input">
+                        <label for="phone-number">Phone number</label>
+                        <input type="text" name="phone-number" id="phone-number" minlength="9" maxlength="9">
+                    </div>
+
+                    <div class="input">
                         <label for="password">Password</label>
-                        <input type="password" name="password" id="password">
+                        <input type="password" name="passwor" id="passwor" required>
                     </div>
-                    <div class="form-cell">
-                        <label for="confirm_pw">Confirm Password</label>
-                        <input type="password" id="confirm_pw" name="confirm_pw">
+
+                    <div class="input">
+                        <label for="confirm-password">Confirm password</label>
+                        <input type="password" name="confirm-password" id="confirm-password" required>
                     </div>
-                </fieldset>
+                </div>
+                <div class="left button"><button type="submit">Create Account</button></div>
+            </form>
+            <div class="log-in left">
+                <p>Already have an account?</p><a href="#">Log in</a>
             </div>
+        </div>
 
-            <div class="button-area">
-                <button type="submit">Create Account</button>
-                <p>Already have an Account? <a href="#">Log in</a></p>
-            </div>
-        </form>
-    </main>
-
+    </div>
 </body>
 
 </html>
